[gd_scene load_steps=77 format=3 uid="uid://ct1gwi15wjhd4"]

[ext_resource type="Texture2D" uid="uid://edig6vevy1iq" path="res://art/Goblin/Goblin/Attack.png" id="1_ey7ue"]
[ext_resource type="Script" path="res://goblin.gd" id="1_y7yfq"]
[ext_resource type="Texture2D" uid="uid://diep0jx5td2xr" path="res://art/Goblin/Goblin2/Attack2.png" id="2_so0b4"]
[ext_resource type="Texture2D" uid="uid://becrwt6wpetip" path="res://art/Goblin/Goblin/Death.png" id="3_qpw1r"]
[ext_resource type="Texture2D" uid="uid://dfi3lurh2k1sc" path="res://art/Goblin/Goblin/Idle.png" id="4_dwsgc"]
[ext_resource type="Texture2D" uid="uid://c2fd573kwccfg" path="res://art/Goblin/Goblin/Run.png" id="5_ms4i0"]
[ext_resource type="Texture2D" uid="uid://c2p1fkarjsfvc" path="res://art/Goblin/Goblin/Take Hit.png" id="6_ugepp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jnkii"]
size = Vector2(21, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ef0r"]
atlas = ExtResource("1_ey7ue")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_blt6j"]
atlas = ExtResource("1_ey7ue")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_xf2k7"]
atlas = ExtResource("1_ey7ue")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_jpj77"]
atlas = ExtResource("1_ey7ue")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_orjrh"]
atlas = ExtResource("1_ey7ue")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_6f8hx"]
atlas = ExtResource("1_ey7ue")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_e3e3p"]
atlas = ExtResource("1_ey7ue")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ey8q"]
atlas = ExtResource("1_ey7ue")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_t3svl"]
atlas = ExtResource("2_so0b4")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_pmtn4"]
atlas = ExtResource("2_so0b4")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ysnfk"]
atlas = ExtResource("2_so0b4")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_5io6w"]
atlas = ExtResource("2_so0b4")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_s8v48"]
atlas = ExtResource("2_so0b4")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_hi8ot"]
atlas = ExtResource("2_so0b4")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ecf1"]
atlas = ExtResource("2_so0b4")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_3iewi"]
atlas = ExtResource("2_so0b4")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_04ism"]
atlas = ExtResource("3_qpw1r")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_dm48t"]
atlas = ExtResource("3_qpw1r")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_e4ykr"]
atlas = ExtResource("3_qpw1r")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_6at78"]
atlas = ExtResource("3_qpw1r")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_8s0ph"]
atlas = ExtResource("4_dwsgc")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhrlg"]
atlas = ExtResource("4_dwsgc")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmcx5"]
atlas = ExtResource("4_dwsgc")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_6h6ym"]
atlas = ExtResource("4_dwsgc")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ymqnf"]
atlas = ExtResource("5_ms4i0")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_tk3bj"]
atlas = ExtResource("5_ms4i0")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_tlrlk"]
atlas = ExtResource("5_ms4i0")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_cqckw"]
atlas = ExtResource("5_ms4i0")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ve1ac"]
atlas = ExtResource("5_ms4i0")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_x25u8"]
atlas = ExtResource("5_ms4i0")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ft860"]
atlas = ExtResource("5_ms4i0")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_tiymp"]
atlas = ExtResource("5_ms4i0")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_1cqwf"]
atlas = ExtResource("6_ugepp")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7hdt"]
atlas = ExtResource("6_ugepp")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_xx3og"]
atlas = ExtResource("6_ugepp")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_5tb8j"]
atlas = ExtResource("6_ugepp")
region = Rect2(450, 0, 150, 150)

[sub_resource type="SpriteFrames" id="SpriteFrames_755l3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ef0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_blt6j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xf2k7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jpj77")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_orjrh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6f8hx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e3e3p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ey8q")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t3svl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pmtn4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ysnfk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5io6w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s8v48")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hi8ot")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ecf1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3iewi")
}],
"loop": false,
"name": &"attack2",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_04ism")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dm48t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e4ykr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6at78")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8s0ph")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhrlg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmcx5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6h6ym")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ymqnf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tk3bj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tlrlk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cqckw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ve1ac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x25u8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ft860")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tiymp")
}],
"loop": true,
"name": &"run",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1cqwf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7hdt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xx3og")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5tb8j")
}],
"loop": false,
"name": &"take_hit",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_guoso"]
size = Vector2(43.5714, 35)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yrysm"]
size = Vector2(54.2857, 35.7143)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dbim8"]
size = Vector2(64.2857, 27.1429)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uym1o"]
size = Vector2(63.9286, 27.1429)

[sub_resource type="CircleShape2D" id="CircleShape2D_vrif3"]
radius = 4962.07

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eu7bt"]
size = Vector2(24, 29)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3id4s"]
size = Vector2(96, 27)

[sub_resource type="Animation" id="Animation_6xfsr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D/attack1right/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D/attack1left/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AnimatedSprite2D/attack2right/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AnimatedSprite2D/attack2left/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_oypak"]
resource_name = "attack1"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D/attack1right/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D/attack1left/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_i0ys5"]
resource_name = "attack2"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack2"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D/attack2right/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D/attack2left/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_cskiw"]
resource_name = "death"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"death"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_nb0k0"]
resource_name = "idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_xh0dc"]
resource_name = "run"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"run"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_4gdef"]
resource_name = "take_hit"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"take_hit"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y3q2e"]
_data = {
"RESET": SubResource("Animation_6xfsr"),
"attack1": SubResource("Animation_oypak"),
"attack2": SubResource("Animation_i0ys5"),
"death": SubResource("Animation_cskiw"),
"idle": SubResource("Animation_nb0k0"),
"run": SubResource("Animation_xh0dc"),
"take_hit": SubResource("Animation_4gdef")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_d6t06"]
animation = &"attack1"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_yld3d"]
animation = &"attack2"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lb2mr"]
animation = &"death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lhsl8"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_48isp"]
animation = &"run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3rreh"]
animation = &"take_hit"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1yv16"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_j2ra0"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_jgajj"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vq115"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_fw4mj"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7abrq"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_041mo"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4v56c"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_np6yu"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_6nloe"]
states/attack1/node = SubResource("AnimationNodeAnimation_d6t06")
states/attack1/position = Vector2(751.865, 156.765)
states/attack2/node = SubResource("AnimationNodeAnimation_yld3d")
states/attack2/position = Vector2(604.865, 231.265)
states/death/node = SubResource("AnimationNodeAnimation_lb2mr")
states/death/position = Vector2(795.365, -5.73499)
states/idle/node = SubResource("AnimationNodeAnimation_lhsl8")
states/idle/position = Vector2(296, 99)
states/run/node = SubResource("AnimationNodeAnimation_48isp")
states/run/position = Vector2(379.5, 40.5)
states/take_hit/node = SubResource("AnimationNodeAnimation_3rreh")
states/take_hit/position = Vector2(627.865, -41.235)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_1yv16"), "idle", "run", SubResource("AnimationNodeStateMachineTransition_j2ra0"), "death", "End", SubResource("AnimationNodeStateMachineTransition_jgajj"), "attack2", "run", SubResource("AnimationNodeStateMachineTransition_vq115"), "run", "take_hit", SubResource("AnimationNodeStateMachineTransition_fw4mj"), "take_hit", "run", SubResource("AnimationNodeStateMachineTransition_7abrq"), "attack1", "take_hit", SubResource("AnimationNodeStateMachineTransition_041mo"), "attack2", "take_hit", SubResource("AnimationNodeStateMachineTransition_4v56c"), "attack1", "run", SubResource("AnimationNodeStateMachineTransition_np6yu")]
graph_offset = Vector2(42.7275, -7.94253)

[node name="goblin" type="CharacterBody2D" groups=["enemies"]]
script = ExtResource("1_y7yfq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0.5, 9.5)
shape = SubResource("RectangleShape2D_jnkii")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.7, 0.7)
sprite_frames = SubResource("SpriteFrames_755l3")
animation = &"attack"

[node name="attack1right" type="Area2D" parent="AnimatedSprite2D"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/attack1right"]
position = Vector2(21.7857, 8.92856)
shape = SubResource("RectangleShape2D_guoso")
disabled = true

[node name="attack1left" type="Area2D" parent="AnimatedSprite2D"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/attack1left"]
position = Vector2(-11.4286, 9.28571)
shape = SubResource("RectangleShape2D_yrysm")
disabled = true

[node name="attack2right" type="Area2D" parent="AnimatedSprite2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/attack2right"]
position = Vector2(33.5714, 10.7143)
shape = SubResource("RectangleShape2D_dbim8")
disabled = true

[node name="attack2left" type="Area2D" parent="AnimatedSprite2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/attack2left"]
position = Vector2(-34.2857, 11.4286)
shape = SubResource("RectangleShape2D_uym1o")
disabled = true

[node name="detection_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
shape = SubResource("CircleShape2D_vrif3")

[node name="hitbox" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(0, 5.5)
shape = SubResource("RectangleShape2D_eu7bt")

[node name="attacked_cooldown" type="Timer" parent="."]

[node name="attack_cooldown" type="Timer" parent="."]

[node name="attack_range" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_range"]
position = Vector2(-1, 7.5)
shape = SubResource("RectangleShape2D_3id4s")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_y3q2e")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_6nloe")
anim_player = NodePath("../AnimationPlayer")

[connection signal="body_entered" from="AnimatedSprite2D/attack1right" to="." method="_on_attack_1_right_body_entered"]
[connection signal="body_entered" from="AnimatedSprite2D/attack1left" to="." method="_on_attack_1_left_body_entered"]
[connection signal="body_entered" from="AnimatedSprite2D/attack2right" to="." method="_on_attack_2_right_body_entered"]
[connection signal="body_entered" from="AnimatedSprite2D/attack2left" to="." method="_on_attack_2_left_body_entered"]
[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="hitbox" to="." method="_on_hitbox_body_exited"]
[connection signal="timeout" from="attacked_cooldown" to="." method="_on_attacked_cooldown_timeout"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="body_entered" from="attack_range" to="." method="_on_attack_range_body_entered"]
[connection signal="body_exited" from="attack_range" to="." method="_on_attack_range_body_exited"]
